# neural-garden

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
configs/: stages.yaml
crates/garden-cli/: Cargo.toml
crates/garden-cli/src/: live.rs  main.rs  nursery_runner.rs  nursery_snapshot.rs  runner.rs  server.rs  snapshot.rs  tui.rs
crates/garden-cli/src/ui/: alerts.rs  cooperation.rs  diversity.rs  evolution.rs  fitness.rs  island.rs  logs.rs  mod.rs  nursery_recap.rs  nursery_zoom.rs  population.rs
crates/garden-core/: Cargo.toml
crates/garden-core/benches/: simulation.rs
crates/garden-core/src/: lib.rs
crates/garden-core/src/application/: absorption.rs  actions.rs  config.rs  environment.rs  evolution.rs  highlights.rs  lifecycle.rs  metrics.rs  mod.rs  nursery.rs  perception.rs  photosynthesis.rs  season.rs  sim.rs
crates/garden-core/src/domain/: brain.rs  events.rs  fixture.rs  island.rs  mod.rs  plant.rs  rng.rs  stages.rs  symbiosis.rs  traits.rs  world.rs
crates/garden-core/src/infra/: config.rs  mod.rs  noise.rs  nursery.rs  persistence.rs  replay.rs  rng.rs  stages.rs
crates/garden-core/src/infra/dto/: event.rs  mod.rs  plant.rs  sim.rs  world.rs
crates/garden-core/tests/: integration.rs
crates/garden-core/tests/features/: croissance.feature  decomposition.feature  invasion.feature  saisons.feature  symbiose.feature
crates/garden-core/tests/steps/: croissance.rs  decomposition.rs  invasion.rs  mod.rs  saisons.rs  symbiose.rs
docs/: 01-world.md  02-plants.md  03-perception.md  04-brain.md  05-interactions.md  06-evolution.md  07-simulation.md  (+7 more)
(+39 files in other folders)
