[package]
name = "garden-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
garden-core = { path = "../garden-core" }
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"
ctrlc = "3.4"
tiny_http = "0.12"
tungstenite = "0.24"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
