[package]
name = "garden-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
serde_yaml = "0.9"
rand = "0.8"
noise = "0.9"
rayon = "1.10"

[dev-dependencies]
cucumber = "0.22"
futures = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[[test]]
name = "integration"
harness = false

[[bench]]
name = "simulation"
harness = false
